src/snapshots/pbsql__tql_validator__tests__table_factor__table__duplicate_alias.snap
---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Ok: ~
- - "select \"~/books/things\".id, \"~/books/things\".title"
  - "from \"~/books/things\""
  - "join \"~/books/non-things\" as \"~/books/things\""
